<resources>
    <string name="app_name">Giteee</string>
    <string name="save_value">Save Value</string>
    <string name="jump_to_login_activity">Jump to Login Activity</string>
    <string name="login_activity_title">Login</string>
    <string name="login_succeed">Login succeed</string>
    <string name="login_failed">Login failed</string>

    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_follower_list">Follower</string>
    <string name="title_following_list">Following</string>
    <string name="title_organization_list">Organizations</string>
    <string name="title_member_list">Members</string>
    <string name="title_search_list">Search</string>
    <string name="title_repository_list">Repositories</string>
    <string name="title_watch_list">Watched</string>
    <string name="title_star_list">Starred</string>
    <string name="title_issue_list">Issues</string>
    <string name="title_about">About</string>
    <string name="title_user_list">Users</string>

    <string name="home_my_work_title">My Work</string>
    <string name="default_item_title">Default Item Title</string>
    <string name="profile_follower_title">follower</string>
    <string name="profile_following_title">following</string>

    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>

    <string name="refresh_successfully">Refresh successfully</string>
    <string name="get_profile_failed">Get profile failed</string>
    <string name="get_pull_request_failed">Get pull requests failed</string>
    <string name="reason_get_pull_request_failed">Get pull requests failed since there is no API for it</string>
    <string name="no_finish_yet">Haven\'t finished yet</string>
    <string name="reason_get_issue_not_complete">Get created issue failed since there is no API for it</string>

    <string name="search_repo_format">Search repositories about </string>
    <string name="search_issue_format">Search issues about </string>
    <string name="search_profile_format">Search persons about </string>

    <string name="borealin_name">施楚宁</string>
    <string name="borealin_id">\@Borealin</string>
    <string name="martin_nose_name">刘隽良</string>
    <string name="martin_nose_id">\@MartinNose</string>
</resources>