<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settingViewModel"
            type="cn.borealin.giteee.ui.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.AboutActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_about"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_deep_orange_24dp"
                app:title="@string/title_about" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_about"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/borealin_portrait"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@id/martin_nose_portrait"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_version"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@mipmap/borealin_portrait" />

        <TextView
            android:id="@+id/borealin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borealin_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/borealin_portrait"
            app:layout_constraintStart_toStartOf="@id/borealin_portrait"
            app:layout_constraintTop_toBottomOf="@id/borealin_portrait" />

        <TextView
            android:id="@+id/borealin_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borealin_id"
            app:layout_constraintEnd_toEndOf="@id/borealin_name"
            app:layout_constraintStart_toStartOf="@id/borealin_name"
            app:layout_constraintTop_toBottomOf="@id/borealin_name" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/martin_nose_portrait"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="@id/borealin_portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/borealin_portrait"
            app:layout_constraintTop_toTopOf="@id/borealin_portrait"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@mipmap/martin_nose" />

        <TextView
            android:id="@+id/martin_nose_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/martin_nose_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/martin_nose_portrait"
            app:layout_constraintStart_toStartOf="@id/martin_nose_portrait"
            app:layout_constraintTop_toBottomOf="@id/martin_nose_portrait" />

        <TextView
            android:id="@+id/martin_nose_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/martin_nose_id"
            app:layout_constraintEnd_toEndOf="@id/martin_nose_name"
            app:layout_constraintStart_toStartOf="@id/martin_nose_name"
            app:layout_constraintTop_toBottomOf="@id/martin_nose_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/action_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/borealin_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>