<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="searchViewModel"
            type="cn.borealin.giteee.ui.search.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_search_list"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_deep_orange_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="25dp"
                    android:singleLine="true"
                    android:text="@={searchViewModel.inputContent}" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/search_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/app_bar_search">

            <TextView
                android:id="@+id/search_repo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="14dp"
                android:text="@string/search_repo_format"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/search_repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="10dp"
                android:text="@{searchViewModel.inputContentStatic}"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/search_repo">

            <TextView
                android:id="@+id/search_issue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="14dp"
                android:text="@string/search_issue_format"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/search_issue_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="10dp"
                android:text="@{searchViewModel.inputContentStatic}"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/search_issue">

            <TextView
                android:id="@+id/search_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="14dp"
                android:text="@string/search_profile_format"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/search_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="10dp"
                android:text="@{searchViewModel.inputContentStatic}"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>